syntax = "proto3";

package proto.v1;

option java_multiple_files = true;
option java_package = "proto.v1";
//option java_outer_classname = "Proto";

// The greeting service definition.
service GreeterService {
  // Sends a greeting
  rpc SayHello (SayHelloRequest) returns (SayHelloResponse) {}
}

// The request message containing the user's name.
message SayHelloRequest {
  string name = 1;
}

// The response message containing the greetings.
message SayHelloResponse {
  string message = 1;
}